# WCWvsNWOWorldTourRecomp

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  patches.toml  wcw.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_TEMPLATE.md  release-readme.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  update-pr-artifacts.yml  validate-external.yml  validate-internal.yml  validate.yml
cmake/coretest/: CMakeLists.txt  coretest_main.cpp
disasm/: README.md  libultra.md  reloc_addrs.txt  symbol_addrs.txt  wcw.ld  wcw.yaml  wcwvs.nwo_worldtour.yaml
docs/: beta-release-plan.md  devlog.md  mod-support-plan.md  release-v0.1.0-notes-draft.md
docs/upstream/: n64modernruntime-message-pump-starvation.md  rt64-present-blit-race.md
icons/: app.rc
include/: ovl_patches.hpp
lib-patches/: N64ModernRuntime-N64Recomp.patch  N64ModernRuntime.patch  README.md  RecompFrontend.patch  apply.ps1  export.ps1  rt64-plume.patch  rt64.patch
patches/: Makefile  patches.h  patches.ld  recompui_event_structs.h  required_patches.c  syms.ld  ui_funcs.h  widescreen.c
patches/dummy_headers/: stdint.h  ultra64.h
rsp/: README.md  wcw_audio.toml
run/: README.md  build.ps1  harness.cpp  recomp.h
run/librecomp/: sections.h
src/game/: recomp_api.cpp
src/main/: main.cpp  register_overlays.cpp  register_patches.cpp
syms/: README.md  data_dump.toml  dump.toml
tools/: cycle.ps1  env-msvc.ps1  env.ps1  gen_symbols.py  recompile.ps1
upstream/: README.md  plume-copytextureregion-null-deref.md  rt64-zero-viewproj-nan.md
